modals overlapped fixed and added buttons inside

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -22,7 +22,7 @@
 
 .custom-validation-error {
     float: left;
-    color: red;
+    color: #F44336;
 }
 
 .login-link {
